title Update _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
 title                    : "Git Rich"
 title_separator          : "-"
-subtitle                 : "🔄 Fork Code. Fund Dreams."
-name                     : "Your Name"
+subtitle                 : "Commit to Value"
+name                     : "Tech Blog"
 description              : "AMR Algorithm, Machine Vision, Deep Learning Research Notes"
 url                      : "https://git-rich.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
