author Update _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Git Rich"
+  name             : "🍕 Code, Rain, and Pizza"
   avatar           : "/assets/images/git-rich-logo.png"
   bio              : "A tech-driven community exploring autonomous driving, machine vision, and deep learning together."
   location         : "Seoul, Korea"
