--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
   name             : "🔄 Fork Code. Fund Dreams."
   avatar           : "/assets/images/git-rich-logo.png"
   bio              : "A tech-driven community exploring AMR, machine vision, and DL together."
-  location         : "Seoul, Korea"
+  location         : "🍕 Code, Rain, and Pizza"
   email            : "smc9759@gmail.com" 
   links:
     - label: "Email"
