--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,19 @@ main:
     url: /projects/
   - title: "Edit guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "DL"
+    children:
+      - title: "1. 기획 & 데이터 설계"
+        url: /projects/deep-learning/planning/
+
+      - title: "2. 모델링 & 학습 평가"
+        url: /projects/deep-learning/modeling/
+
+      - title: "3. 배포 & 운영"
+        url: /projects/deep-learning/deployment/
+
+      - title: "기타"
+        url: /projects/deep-learning/etc/    
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
@@ -12,3 +25,6 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+
+
