사이드바추가Update _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -319,8 +319,11 @@ defaults:
       type: posts
     values:
       layout: single
+      sidebar:
+        nav: main      
       author_profile: true
       read_time: true
       comments: # true
       share: true
       related: true
+
